<resources>
    <string name="app_name">Initiate-News</string>


    <!-- Bottom Navigation View -->
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="friend">Friend</string>
    <string name="favorite">Favorite</string>
    <string name="account">Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- News View -->
    <string name="lbns">Location Based News Summarization</string>
    <string name="no_news_message">There is no news related to the %1$s.</string>
    <string name="shared_keywords">Shared Keywords</string>

    <!-- Search View -->
    <string name="addkeyword">Add Keyword</string>

    <!-- Friend View -->
    <string name="friends">Friends</string>
    <string name="friendsList">Friends List</string>
    <string name="addFriend">Add Friend</string>
    <string name="friendName">Friend Name</string>
    <string name="pending">Pending</string>
    <string name="accept">Accept</string>
    <string name="share">Share</string>
    <string name="remove_friend">Remove Friend</string>

    <!-- User View -->
    <string name="preference">Update Preference</string>
    <string name="logout">Logout</string>
    <string name="location_text">Latitude: %1$s, Longitude: %2$s</string>
    <string name="location_text_with_country_province">Country: %1$s, Province: %2$s</string>
    <string-array name="language_options">
        <item>English</item>
        <item>French</item>
        <!-- Add other languages as needed -->
    </string-array>

    <!--Keyword View-->
    <string name="remove_keyword">Remove Keyword</string>
</resources>