<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <TextView
                android:id="@+id/txt_friendsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/friends"
                android:textColor="@color/primary"
                android:textSize="32sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:padding="10dp"
            android:background="@drawable/divider_line"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp">

            <EditText
                android:id="@+id/et_addFriend"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="145dp"
                android:drawableEnd="@drawable/ic_search"
                android:inputType="text" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_addFriend"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="5dp"
                android:background="@color/primary"
                android:text="@string/addFriend" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="25dp">

            <TextView
                android:id="@+id/txt_friendsList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/friendsList"
                android:textColor="@color/primary"
                android:textSize="32sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <!-- Could use recyclerview instead? -->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:background="@drawable/friend_list_border">

            <LinearLayout
                android:id="@+id/friends_list_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"/>

        </ScrollView>

    </LinearLayout>
</layout>